--- a/Proj. Conheça ETPC.html
+++ b/Proj. Conheça ETPC.html
@@ -19,7 +19,7 @@
     
     <body> 
 
-        <h1 class="teste"> labirinto do Caos </h1>
+        <h1 class="teste"> O labirinto do Caos </h1>
         <h3 class="teste"> O elevador hidráulico</h3>
         <p> </p>
 
